# rsRPC_Next

./: Cargo.toml
src/: bin.rs
src/server/: ipc_win.rs  process.rs
